--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "languagetool-proxy",
   "version": "1.0.0",
+  "description": "Serveur de correction avec DeepSeek",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,6 +9,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^3.3.2"
   }
 }
